syntax = "proto3";

// C# 네임스페이스 지정
option csharp_namespace = "GrpcApp";

// gRPC 서비스 정의
service GameService {
  rpc Game(stream GameMessage) returns (stream GameMessage);
}

// 게임 메시지 정의
message GameMessage {
  string user_id = 1;
  string token = 2;
  string message = 3;
  int64 timestamp = 4;
  int32 result_code = 5;
  string result_message = 6;
  string response_data = 7;
  
  oneof message_type {
    AuthUser auth_user = 10;
    Ping ping = 11;
    Kick kick = 12;
  }
}

// 인증 요청/응답
message AuthUser {
  int32 platform_type = 1;
  string auth_key = 2;
  string ret_pass_key = 3;
  string ret_sub_pass_key = 4;
}

// 핑 요청/응답
message Ping {
  int32 seq_no = 1;
}

// 킥 메시지
message Kick {
  string reason = 1;
}

// 결과 코드 enum
enum ResultCode {
  SUCCESS = 0;
  FAIL = 1;
  INVALID_TOKEN = 2;
  AUTHENTICATION_FAILED = 3;
  SESSION_EXPIRED = 4;
}